--- a/public/index.html
+++ b/public/index.html
@@ -75,20 +75,20 @@
     </div>
     
     <div id="internship" class="portf" style="display:none">
-      <h2>General Mills Data Engineer Jan-Jun 2023</h2>
+      <h2>General Mills Data Engineer Jan-Jun 2023 🏢 </h2>
       <p>
         As a Data Engineer I have developed an end to end automated datapipeline.<br>
         I can analyze and validate the data in tableau, bigquery, excel.<br>
         I have worked on technologies like jenkins, gcp, github, python.
       </p>
-      <h2>CodSoft Python Programmer Sep-Oct 2023</h2>
+      <h2>CodSoft Python Programmer Sep-Oct 2023 </h2>
       <p>
         As a python programmer I have developed apps in python, django and deployed it in github.
       </p> 
     </div>
     
     <div id="work" class="portf" style="display:none">
-      <h2>Infosys Limited Operations Executive 2019-2020</h2>
+      <h2>Infosys Limited Operations Executive 2019-2020 🏢 </h2>
       <p>
         As an operations executive I was handling customer queries and inquiries in ticketing tool platfomr called service now.<br>
         I was troubleshooting and resolving the technical issues of customers.<br> 
